fix to select the root element

--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -11,7 +11,7 @@
  
 
   <script type="module">
-    // const selectRoot = document.getElementById('root');
+    const selectRoot = document.getElementById('root');
     // const elementPpty = {id: 'dance', children: 'Hello World'};
     // const elem = 'h2';
 
