--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -9,12 +9,36 @@
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
 
+    function Message({subject, greeting}){
+      return (
+      <div className={subject}>{subject} {greeting}</div>
+      );
+    }
+    const PropTypes = {
+      string(props, propName, componentName){
+        const type = typeof props[propName];
+        if(type !== 'string'){
+          return new Error(`The Prop ${propName} with value: ${props[propName]} should have a type of 'string' not ${typeof props[propName]} `);
+        }
+      },
+      number(props, propName, componentName){
+          const type = typeof props[propName];
+          if(type !== 'number'){
+            return new Error(`The Prop ${propName} with value: ${props[propName]} should have a type of 'number' not ${typeof props[propName]} `);
+          }
+        }
+    }
+
+    Message.propTypes = {
+      subject: PropTypes.string,
+      greeting: PropTypes.string
+    }
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
     const element = (
       <div className="container">
-        <div className="message">Hello World</div>
-        <div className="message">Goodbye World</div>
+        <Message subject={"5"} greeting={"World"}></Message>
+        <Message subject={"Goodbye"} greeting={"World"}></Message>
       </div>
     )
 
